Fixing issues with extra padding with new header

--- a/wp-content/themes/clearhead-2017/_sass/_base.scss
+++ b/wp-content/themes/clearhead-2017/_sass/_base.scss
@@ -337,7 +337,7 @@ section.bio-page {
 		a {
 			margin-bottom: 0;
 		}
-		padding-top: 1.35em!important;
+		// padding-top: 1.35em!important;
 	}
 	section.theme-purple {
 		background: #F4F8FA;
