--- a/wp-content/themes/clearhead-2017/_sass/_layout.scss
+++ b/wp-content/themes/clearhead-2017/_sass/_layout.scss
@@ -659,9 +659,9 @@ footer {
 section {
 	background-color: $white;
 	color: $black;
-	padding: 2.25em 0;
+	// padding: 2.25em 0;
 	@include w640 {
-		padding: 3.265625em 0;
+		//padding: 3.265625em 0;
 	}
 	&.spacing-added {
 		padding: 3.5em 0;
